...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/listviewSearchLinearLayout"
        android:layout_marginTop="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listviewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>
